[package]
authors = ["Chris Bruce <chris@blockjoy.com>", "Sean Carey <sean@blockjoy.com>"]
edition = "2021"
name = "helium-blockchain-http"
publish = false
version = "0.1.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[dependencies]
axum = "0.3"
axum-debug = "0.1.0"
dotenv = "0.15.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.5", features = ["runtime-tokio-rustls", "postgres"]}
tokio = {version = "1.13", features = ["full"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
